# Speech-Recognition-with-Remote-Display-System

./: README.md
ssd1306_pico_W/: CMakeLists.txt  cmake_make指令.txt  lwipopts.h  main.c  ssd1306.c  ssd1306.h  tcp_server.c  tcp_server.h
ssd1306_rpi5/snd2txt/: record_snd2txt.py  snd2txt.sh
ssd1306_rpi5/snd2txt/ssd1306_API/: Makefile  ssd1306_API.c
ssd1306_rpi5/ssd1306_API/: hello_bitmap.h  ssd1306_API.c  test.txt
ssd1306_rpi5/ssd1306_chardev/: Makefile  ssd1306.h  ssd1306_core.c  ssd1306_mmap.h  ssd1306_rpi_drv.c
ssd1306_rpi5/ssd1306_chardev/ssd1306_API_txt_subtitle/: oasis_bitmap.h  ssd1306_API.c  ssd1306_mmap.h
